--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "one percent tracker app",
   "main": "index.js",
+  "engines": {
+    "node": "15.x"
+  },
   "dependencies": {
     "abab": "^2.0.6",
     "accepts": "^1.3.8",
