move fsevents to optional dependency

--- a/package.json
+++ b/package.json
@@ -356,7 +356,6 @@
     "fs-extra": "^7.0.0",
     "fs-write-stream-atomic": "^1.0.10",
     "fs.realpath": "^1.0.0",
-    "fsevents": "^2.3.2",
     "function-bind": "^1.1.1",
     "function.prototype.name": "^1.1.5",
     "functional-red-black-tree": "^1.0.1",
@@ -1103,5 +1102,8 @@
   "bugs": {
     "url": "https://github.com/tonybach/one-percent-tracker/issues"
   },
-  "homepage": "https://github.com/tonybach/one-percent-tracker#readme"
+  "homepage": "https://github.com/tonybach/one-percent-tracker#readme",
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
+  }
 }
