--- a/package.json
+++ b/package.json
@@ -625,6 +625,7 @@
     "mixin-deep": "^1.3.2",
     "mixin-object": "^2.0.1",
     "mkdirp": "^0.5.6",
+    "mongoose": "^6.4.4",
     "move-concurrently": "^1.0.1",
     "ms": "^2.1.2",
     "multicast-dns": "^6.2.3",
@@ -643,6 +644,7 @@
     "node-libs-browser": "^2.2.1",
     "node-notifier": "^5.4.5",
     "node-releases": "^2.0.6",
+    "nodemon": "^2.0.19",
     "normalize-package-data": "^2.5.0",
     "normalize-path": "^3.0.0",
     "normalize-range": "^0.1.2",
@@ -1091,6 +1093,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js",
+    "dev": "nodemon server/index.js",
     "build": "cd client && npm i && npm run build"
   },
   "repository": {
